[metadata]
name = yang-imp-fuzzer
version = 0.1.0
author = Juraj Vijtiuk
author_email = juraj.vijtiuk@sartura.hr
description = A YANG model implementation fuzzer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/telekom/yang-imp-fuzzer
license = GPL-2.0-or-later
license_files = COPYING
project_urls =
    Bug Tracker = https://github.com/telekom/yang-imp-fuzzer/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Testing
    Topic :: Security
keywords = YANG NETCONF python fuzzer

[options]
packages = yang_imp_fuzzer
python_requires = >=3.6
install_requires =
    boofuzz
    libyang=
    rstr=
    xmltodict
